--- a/assets/templates/addTaskPopUp.html
+++ b/assets/templates/addTaskPopUp.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <div id="addTaskPopUpContainer">
+    <div class="add_task_pu_container" id="addTaskPopUpContainer">
         <div class="add_task_popUp_container" id="createTaskPopUp">
             <div class="add_task_popUp_cont column-flex-start">
                 <img class="add_task_popUp_close" src="assets/img/closePopCreate.svg" onclick="closePopUpCreate()">
