--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -109,4 +109,19 @@ body {
         height: 32px;
     }
 
+    .header_popup_logout {
+        width: 120px;
+        height: 120px;
+    }
+
+    .header_popup {
+        width: 110px;
+        height: 100px;
+        gap: 10px;
+    }
+
+    .header_logout_text_resp {
+        font-size: 17px;
+    }
+
 }
