--- a/assets/templates/editContactPopUp.html
+++ b/assets/templates/editContactPopUp.html
@@ -16,7 +16,114 @@
   </head>
 
   <body>
-    <div id="editContactPopUp"></div>
+    <div id="editContactPopUp">
+      <div class="newContact_popUp_container" id="editContactPop">
+        <div class="newContact_popUp_cont column-center">
+          <div class="new_contact_top column-center">
+            <img
+              src="assets/img/crossWhite.svg"
+              class="new_contact_close"
+              onclick="closeEditContact()"
+            />
+            <img src="assets/img/JoinWhite.svg" class="new_contact_logo" />
+            <a class="new_contact_title font400">Edit contact</a>
+            <a class="new_contact_subtitle font400"
+              >Tasks are better with a team!</a
+            >
+          </div>
+          <div class="new_contact_bottom column-center">
+            <div class="new_contact_bottom1">
+              <div
+                class="new_contact_circle row-center-center"
+                id="circleContact"
+              >
+                <a
+                  class="edit_contact_circle_user font400"
+                  id="circleInitials"
+                ></a>
+              </div>
+            </div>
+            <div class="new_contact_bottom2 column-flex-start">
+              <div class="new_contact_info_user column-flex-start">
+                <div class="new_contact_info row-center">
+                  <input
+                    type="text"
+                    class="newContact_input font400 row-spacebet-center"
+                    placeholder="Name"
+                    id="editContactName"
+                  />
+                  <img src="assets/img/userSmall.svg" />
+                </div>
+                <a
+                  class="new_contact_required d-none"
+                  id="newFieldRequiredName"
+                  pattern="[A-Za-z]+\s[A-Za-z]+"
+                  >This field is required</a
+                >
+              </div>
+              <div class="new_contact_info_user column-flex-start">
+                <div class="new_contact_info row-center">
+                  <input
+                    type="email"
+                    class="newContact_input font400 row-spacebet-center"
+                    placeholder="Email"
+                    id="editContactEmail"
+                  />
+                  <img src="assets/img/briefSmall.svg" />
+                </div>
+                <a
+                  class="new_contact_required d-none"
+                  id="newFieldRequiredEmail"
+                  >This field is required</a
+                >
+              </div>
+              <div class="new_contact_info_user column-flex-start">
+                <div class="new_contact_info row-center">
+                  <input
+                    type="number"
+                    class="newContact_input font400 row-spacebet-center"
+                    placeholder="Phone"
+                    id="editContactPhone"
+                  />
+
+                  <img src="assets/img/phoneSmall.svg" />
+                </div>
+                <a
+                  class="new_contact_required d-none"
+                  id="newFieldRequiredPhone"
+                  >This field is required</a
+                >
+              </div>
+            </div>
+            <div class="new_contact_bottom3 column_flexend_center">
+              <div class="new_contact_bottons row-center-center">
+                <button
+                  class="new_contact_botton_cancel row-center-center"
+                  onclick="deleteContact()"
+                >
+                  <a class="new_contact_cancel font400">Delete</a>
+                </button>
+                <button
+                  class="edit_contact_botton_create row-center-center"
+                  onclick="editOldContact()"
+                >
+                  <a class="new_contact_button font400">Save</a>
+                  <img src="assets/img/checkCreateT.svg" />
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div
+        class="pop_up_contact_created row-center-center d-none"
+        id="contactCreated"
+      >
+        <a class="pop_up_contact_created_text font400"
+          >Contact succesfully created</a
+        >
+      </div>
+    </div>
 
     <script src="assets/js/login-signup.js"></script>
     <script src="assets/js/forgotPassword.js"></script>
