--- a/assets/css/newContactPops.css
+++ b/assets/css/newContactPops.css
@@ -162,6 +162,16 @@
     cursor: pointer;
 }
 
+.edit_contact_botton_create {
+    gap: 10px;
+    width: 86px;
+    height: 61px;
+    background: #4589FF;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
+}
+
 
 .new_contact_cancel {
     font-size: 23px;
@@ -198,4 +208,10 @@
     background: #005DFF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
+}
+
+.edit_contact_circle_user {
+    color: #FFF;
+    text-align: center;
+    font-size: 32px;
 }
