--- a/assets/css/miniPopups.css
+++ b/assets/css/miniPopups.css
@@ -99,7 +99,7 @@
     position: absolute;
     right: 0;
     width: 518px;
-    height: 950px;
+    height: -webkit-fill-available;
     overflow-y: scroll;
     background: #FFFFFF;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.16);
@@ -108,15 +108,14 @@
 }
 
 .add_task_popUp_cont {
-    padding-top: 60px;
+    padding-top: 10px;
     left: 36px;
     gap: 20px;
     position: absolute;
     width: 480px;
-    height: 890px;
 }
 
-.add_task_popUp_close {
+.add_task_popUp_close_PU {
     position: absolute;
     width: 21.65px;
     height: 21.65px;
