--- a/assets/templates/addTaskPopUp.html
+++ b/assets/templates/addTaskPopUp.html
@@ -1,155 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-        href="https://fonts.googleapis.com/css?family=Open+Sans:300,regular,500,600,700,800,300italic,italic,500italic,600italic,700italic,800italic"
-        rel="stylesheet" />
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,regular,500,600,700,800,300italic,italic,500italic,600italic,700italic,800italic"
+      rel="stylesheet"
+    />
 
-    <link rel="stylesheet" href="assets/css/miniPopups.css">
-    <link rel="stylesheet" href="assets/css/models.css">
-    <link rel="stylesheet" href="assets/css/addTask.css">
+    <link rel="stylesheet" href="assets/css/miniPopups.css" />
+    <link rel="stylesheet" href="assets/css/models.css" />
+    <link rel="stylesheet" href="assets/css/addTask.css" />
 
     <script src="assets/js/header.js"></script>
     <script src="assets/js/script.js"></script>
     <script src="assets/js/addTask.js"></script>
-    <script src="assets/js/board.js"></script>
+    <script src="assets/js/login-signup.js"></script>
+    <script src="assets/js/mini_backend.js"></script>
     <script src="assets/js/contacts.js"></script>
-</head>
+    <script src="assets/js/board.js"></script>
+    <script src="assets/js/renderHTML.js"></script>
+    <script>
+      setURL(
+        "https://juan-desantos.developerakademie.net/smallest_backend_ever"
+      );
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/uuid@8.3.2/dist/umd/uuidv4.min.js"></script>
+  </head>
 
-<body>
+  <body>
     <div class="add_task_pu_container" id="addTaskPopUpContainer">
-        <div class="add_task_popUp_container" id="createTaskPopUp">
-            <div class="add_task_popUp_cont column-flex-start">
-                <img class="add_task_popUp_close" src="assets/img/closePopCreate.svg" onclick="closePopUpCreate()">
-                <div class="add_task_popUp_head row-flexstart">
-                    <div class="add_task_popUp_title">
-                        <a class="add_task_popUp_Title font400">Add Task</a>
-                    </div>
-                    <button class="add_task_popUp_button_create row-center-center" onclick="createATaskPU()">
-                        <a class="add_task_button_create font400">Create Task</a>
-                        <img src="assets/img/checkCreateT.svg" class="add_task_crate_check">
-                    </button>
-                </div>
-                <div class="add_task_title column-flex-start">
-                    <div class="add_task_title_cont row-center">
-                        <input class="add_task_input font400" placeholder="Enter a title" required id="inputTitleTaskPU"
-                            onchange="addTitle()"></input>
-                    </div>
-                    <a class="field_required d-none" id="titleRequiredPU">This field is required</a>
-                </div>
-                <div class="add_task_contacts_cont column-flex-start" id="assignedContactcontPU">
-                    <div class="add_task_contacts column-flex-start">
-                        <div class="contacts_img_cont row-center" onclick="expandMenu()" id="selecContacts">
-                            <a class="add_task_subtitle font400">Select contacts to assign</a>
-                            <img src="assets/img/contactsArrow.svg" class="add_task_contacts_arrow">
-                        </div>
-                        <div class="contacts_hidden_cont column-flex-start d-none" id="contactsListPU">
-                            <!--Template Contacts-->
-                        </div>
-                    </div>
-                </div>
-                <div class="new_contact_cont row-center d-none" id="newContactCont">
-                    <div>
-                        <input class="new_contact_input row-center font400" id="addTaskNewContact"
-                            placeholder="Contact email"></input>
-                    </div>
-                    <div class="new_contact_input_icons row-center-center">
-                        <img src="assets/img/cancelBlue.svg" onclick="cancelNewContact()">
-                        <img src="assets/img/grauLineSmall.svg">
-                        <img src="assets/img/blueCheck.svg" onclick="createNewContactTask()">
-                    </div>
-                </div>
-                <div class="add_task_dueDate_cont column-flex-start">
-                    <a class="add_task_titles font400">Due date</a>
-                    <div class="add_task_Duedate_input row-center">
-                        <input class="Duedate_input font400" placeholder="dd/mm/yyyy" type="date"
-                            id="inputCalendarAddTaskPU" required onchange="addDate()">
-                    </div>
-                    <a class="field_required d-none" id="dateRequiredPU">This field is required</a>
-                </div>
-                <div class="add_task_category_cont column-flex-start" id="selecCategoryCont">
-                    <div class="add_task_select_cat column-flex-start">
-                        <div class="add_task_selectCat row-center" onclick="expandCategory()" id="selecCategory">
-                            <a class="add_task_subtitle font400">Select task category</a>
-                            <img src="assets/img/contactsArrow.svg" class="add_task_contacts_arrow">
-                        </div>
-                        <div class="category_hidden_cont column-flex-start d-none" id="categoryList">
-                            <div class="contacts_choose_cont row-center" onclick="createdNewCategory()">
-                                <a class="add_task_subtitle font400">New category</a>
-                            </div>
-                            <div class="contacts_choose_cont row-center">
-                                <a class="add_task_subtitle font400">Sales</a>
-                                <span class="category_circle_color color_sales"></span>
-                            </div>
-                            <div class="contacts_choose_cont row-center">
-                                <a class="add_task_subtitle font400">Backoffice</a>
-                                <span class="category_circle_color color_backoffice"></span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="new_contact_container column-flex-start d-none" id="newCategoryCont">
-                    <div class="new_contact_cont row-center">
-                        <input class="new_contact_input row-center font400" id="addTaskNewCategory"
-                            placeholder="New category name"></input>
-
-                        <div class="new_contact_input_icons row-center-center">
-                            <img src="assets/img/cancelBlue.svg" onclick="cancelNewCategory()">
-                            <img src="assets/img/grauLineSmall.svg">
-                            <img src="assets/img/blueCheck.svg">
-                        </div>
-                    </div>
-                    <div class="new_category_colors row-center">
-                        <div class="new_category_select_color row-center">
-                            <span class="new_category_circle" style="background: #8AA4FF"></span>
-                            <span class="new_category_circle" style="background: #FF0000"></span>
-                            <span class="new_category_circle" style="background: #2AD300"></span>
-                            <span class="new_category_circle" style="background: #FF8A00"></span>
-                            <span class="new_category_circle" style="background: #E200BE"></span>
-                            <span class="new_category_circle" style="background: #0038FF"></span>
-                        </div>
-                    </div>
-                </div>
-                <div class="add_task_prio_cont row-center-center">
-                    <div class="add_task_prio_buttons row-center-center urgent_hover" id="addTaskPrioUrgentPU"
-                        onclick="choosePrioPU(this)">
-                        <a class="prio_buttons_text font400" id="addTaskPrioUrgentAPU">Urgent</a>
-                        <img class="prio_buttons_img" id="addTaskPrioUrgentImgPU" src="assets/img/PrioAlta.svg">
-                    </div>
-                    <div class="add_task_prio_buttons row-center-center urgent_medium" id="addTaskPrioMediumPU"
-                        onclick="choosePrioPU(this)">
-                        <a class="prio_buttons_text font400" id="addTaskPrioMediumAPU">Medium</a>
-                        <img class="prio_buttons_img" id="addTaskPrioMediumImgPU" src="assets/img/PrioMedia.svg">
-                    </div>
-                    <div class="add_task_prio_buttons row-center-center urgent_low" id="addTaskPrioLowPU"
-                        onclick="choosePrioPU(this)">
-                        <a class="prio_buttons_text font400" id="addTaskPrioLowAPU">Low</a>
-                        <img class="prio_buttons_img" id="addTaskPrioLowImgPU" src="assets/img/PrioBaja.svg">
-                    </div>
-                </div>
-                <div class="add_task_description_cont column-flex-start">
-                    <a class="add_task_titles font400">Description</a>
-                    <textarea class="add_task_descript_input row-flexstart font400" required
-                        placeholder="Enter a Description" id="addTaskDescriptionPU"
-                        onchange="addDescription()"></textarea>
-                    <a class="field_required d-none" id="descriptionRequiredPU">This field is required</a>
-                </div>
-                <div class="add_task_subtasks_cont column-flex-start">
-                    <a class="add_task_titles font400">Subtasks</a>
-                    <div class="subtasks_cont_input_img row-center">
-                        <input class="add_task_subtasks_input row-center font400" placeholder="Add new subtask"
-                            id="addTaskSubTask">
-                        <img src="assets/img/plusBlue.svg" class="plus_blue_img" onclick="subTaskGenerate()">
-                    </div>
-                    <div class="subTaskContainer column-flex-start" id="subTaskContainer"></div>
-                </div>
-            </div>
+      <div class="add_task_popUp_container" id="createTaskPopUpSlide">
+        <div
+          class="add_task_popUp_cont column-flex-start"
+          id="createTaskPopUp"
+        ></div>
+        <div
+          class="add_task_buttons_bottom row-center-center"
+          id="adddTaskButtonsResp"
+        >
+          <button
+            class="add_task_buttons_create row-center-center"
+            onclick="createATaskPU()"
+          >
+            <a class="add_task_create_text font400">Create Task</a>
+            <img src="assets/img/checkCreateT.svg" class="" />
+          </button>
         </div>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
