--- a/assets/css/miniPopups.css
+++ b/assets/css/miniPopups.css
@@ -119,8 +119,8 @@
     position: absolute;
     width: 21.65px;
     height: 21.65px;
-    left: 433.31px;
-    top: 16px;
+    right: 34px;
+    top: 34px;
     cursor: pointer;
 }
 
