--- a/assets/css/viewTask.css
+++ b/assets/css/viewTask.css
@@ -5,11 +5,13 @@ body {
 /* View Task */
 
 .view_task_container {
+    display: none !important;
     z-index: 8;
     background: rgba(255, 255, 255, 0.6);
     width: 100%;
     height: 100vh;
     position: absolute;
+    overflow: hidden;
 }
 
 .view_task_task {
@@ -28,7 +30,7 @@ body {
     position: absolute;
     width: 21.65px;
     height: 21.65px;
-    left: 574.31px;
+    right: 34px;
     top: 34px;
     cursor: pointer;
 }
@@ -80,7 +82,7 @@ body {
     height: 25px;
     font-weight: 700 !important;
     font-size: 20px;
-    color: #000000;
+    color: #42526E;
 }
 
 .view_task_date {
@@ -101,9 +103,6 @@ body {
     gap: 10px;
     width: 125px;
     height: 31px;
-    background: #FFD2D2;
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.16);
-    border-radius: 10px;
 }
 
 .view_task_prio {
@@ -124,16 +123,23 @@ body {
 }
 
 .view_task_contact {
-    gap: 25px;
-    width: 390px;
-    height: 45px;
+    gap: 11px;
+    width: -webkit-fill-available;
+}
+
+.view_task_contacts_container {
+    padding: 7px 16px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    width: 448px;
+    height: 56px;
 }
 
 .view_task_contact_circle {
     gap: 10px;
-    width: 45px;
-    height: 45px;
-    background: #9327FF;
+    width: 42px;
+    height: 42px;
     border: 2px solid #FFFFFF;
     border-radius: 58px;
 }
@@ -141,26 +147,45 @@ body {
 .view_task_contact_initials {
     width: 22px;
     height: 19px;
-    font-size: 16px;
+    font-size: 12px;
     color: #FFFFFF;
 }
 
 .view_task_contact_name {
     width: 300px;
     height: 25px;
-    font-size: 21px;
+    font-size: 19px;
     color: #000000;
 }
 
+.view_task_subTasks_cont {
+    gap: 8px;
+}
+
+.viewTask_sub_cont {
+    display: flex;
+    padding: 6px 16px;
+    gap: 16px;
+}
+
+.view_task_subTasks_name {
+    font-size: 16px;
+}
+
 .view_task_edit {
-    gap: 6px;
+    width: 158px;
+    height: 28px;
+    gap: 8px;
     position: absolute;
-    width: 57px;
-    height: 57px;
-    left: 525px;
-    top: 737px;
-    background: #4589FF;
-    border-radius: 10px;
-    border: none;
+    bottom: 48px;
+    right: 40px;
+}
+
+.view_task_editTask {
+    gap: 8px;
     cursor: pointer;
+}
+
+.delete_task {
+    font-size: 16px;
 }
