--- a/assets/css/board.css
+++ b/assets/css/board.css
@@ -3,9 +3,6 @@ body {
     overflow: hidden;
 }
 
-
-
-
 .board_container {
     width: 100%;
     height: 100vh;
@@ -305,6 +302,22 @@ body {
     gap: 25px;
 }
 
+@media (height < 900px) {
+
+    .board_container {
+        padding-top: 135px;
+    }
+}
+
+@media (height < 650px) {
+    .board_head {
+        top: 100px;
+    }
+
+    .board_columns_container {
+        top: 120px !important;
+    }
+}
 
 
 @media (width < 1400px) {
