--- a/assets/css/summary.css
+++ b/assets/css/summary.css
@@ -269,6 +269,17 @@
     color: #FFFFFF;
 }
 
+@media (height < 900px) {
+    .container_summary {
+        top: 157px
+    }
+
+    .summary_board {
+        top: 250px !important;
+    }
+}
+
+
 @media (width < 1300px) {
 
     .container_summary {
