--- a/assets/css/viewTask.css
+++ b/assets/css/viewTask.css
@@ -190,6 +190,24 @@ body {
     font-size: 16px;
 }
 
+
+.add_task_buttons_ok {
+    width: 78px;
+    height: 60px;
+    padding: 16px 10px;
+    gap: 4px;
+    border-radius: 10px;
+    background: var(--version-2-main-color, #4589FF);
+    cursor: pointer;
+    border: none;
+    position: absolute;
+    right: 40px;
+}
+
+.add_task_buttons_ok img {
+    padding-bottom: 6px;
+}
+
 @media (width < 650px) {
     .view_task_task {
         width: -webkit-fill-available;
