--- a/assets/templates/addTaskPopUp.html
+++ b/assets/templates/addTaskPopUp.html
@@ -37,7 +37,7 @@
           id="createTaskPopUp"
         ></div>
         <div
-          class="add_task_buttons_bottom row-center-center"
+          class="add_task_buttons_bottom center-flex-end"
           id="adddTaskButtonsResp"
         >
           <button
