--- a/assets/templates/addTaskPopUp.html
+++ b/assets/templates/addTaskPopUp.html
@@ -32,6 +32,11 @@
   <body>
     <div class="add_task_pu_container" id="addTaskPopUpContainer">
       <div class="add_task_popUp_container" id="createTaskPopUpSlide">
+        <img
+          class="add_task_popUp_close_PU"
+          src="assets/img/closePopCreate.svg"
+          onclick="closePopUpCreate()"
+        />
         <div
           class="add_task_popUp_cont column-flex-start"
           id="createTaskPopUp"
